

                 SCons - a software construction tool

                            Change Log


RELEASE  VERSION/DATE TO BE FILLED IN LATER

  From Peter Diener:
    - Additional fix to issue #3135 - Also handle 'pure' and 'elemental' type bound procedures
    - Fix issue #3135 - Handle Fortran submodules and type bound procedures

  From William Deegan:
    - Enhanced --debug=explain output. Now the separate components of the dependency list are split up
      as follows:
      
      scons: rebuilding `file3' because:
           the dependency order changed:
           ->Sources
           Old:xxx	New:zzz
           Old:yyy	New:yyy
           Old:zzz	New:xxx
           ->Depends
           ->Implicit
           Old:/usr/bin/python	New:/usr/bin/python
    - Fix Issue #3350 - SCons Exception EnvironmentError is conflicting with Python's EnvironmentError.
    - Fix spurious rebuilds on second build for cases where builder has > 1 target and the source file
      is generated. This was causing the > 1th target to not have it's implicit list cleared when the source
      file was actually built, leaving an implicit list similar to follows for 2nd and higher target
              ['/usr/bin/python', 'xxx', 'yyy', 'zzz']
      This was getting persisted to SConsign and on rebuild it would be corrected to be similar to this
              ['zzz', 'yyy', 'xxx', '/usr/bin/python']
      Which would trigger a rebuild because the order changed.
      The fix involved added logic to mark all shared targets as peers and then ensure they're implicit
      list is all cleared together.
    - Fix Issue #3349 - SCons Exception EnvironmentError is conflicting with Python's EnvironmentError.
      Renamed to SConsEnvironmentError
    - Fix Issue #3350 - mslink failing when too many objects.  This is resolved by adding TEMPFILEARGJOIN variable
      which specifies what character to join all the argements output into the tempfile. The default remains a space